--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-8e12d66f.css" />
+    <link rel="stylesheet" href="/css/main-82b914a2.css" />
   </head>
   <body>
     <header class="hero-header">
   <a href="/">
     <svg width="60" height="36" viewBox="0 0 60 36" xmlns="http://www.w3.org/2000/svg"><title>Group 2</title><g transform="translate(2 2)" stroke-width="4" stroke="#F64662" fill="none" fill-rule="evenodd"><rect width="56" height="32" rx="16"/><path d="M40 14c-2.394 4.186-6.869 7-12 7s-9.606-2.814-12-7" stroke-linecap="round"/></g></svg> Smoor
   </a>
-  <a href="#get-early-access" class="pill pill-red">Get Early Access</a>
+  <a href="#get-access" class="pill pill-red">Get Early Access</a>
 </header>
     <main>
       <section class="hero">
-        <h1>List & Rent For Free. No Agents.</h1>
-        <a href="#get-early-access" class="pill pill-large pill-red">Get Early Access</a>
+        <h1>Free lettings for everyone. Forever.</h1>
+        <a href="#get-access" class="pill pill-large pill-red">Get Early Access</a>
         <div class="smoor-iphone"></div>
       </section>
       <section id="tenants" class="tenants">
@@ -30,10 +30,30 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p>Everything a tenant needs. For free.</p>
-          <p>
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          </p>
+          <p class="lead">Everything a tenant needs. For free.</p>
+          <ul class="features">
+            <li>
+              <div class="icon icon-house"></div>
+              Find properties
+            </li>
+            <li>
+              <div class="icon icon-clock"></div>
+              Pick viewing times
+            </li>
+            <li>
+              <div class="icon icon-document"></div>
+              Neogtiate offers
+            </li>
+            <li>
+              <div class="icon icon-sign"></div>
+              Sign and manage contracts
+            </li>
+            <li>
+              <div class="icon icon-keys"></div>
+              Move in
+            </li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
       </section>
       <section id="landlords" class="landlords">
@@ -43,10 +63,84 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p>Everything a landlord needs. For free.</p>
-          <p>
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          </p>
+          <p class="lead">Everything a landlord needs. For free.</p>
+          <ul class="features">
+            <li>
+              <div class="icon icon-house"></div>
+              List properties
+            </li>
+            <li>
+              <div class="icon icon-search"></div>
+              Find tenants
+            </li>
+            <li>
+              <div class="icon icon-clock"></div>
+              Manage viewings
+            </li>
+            <li>
+              <div class="icon icon-document"></div>
+              Neogtiate offers
+            </li>
+            <li>
+              <div class="icon icon-sign"></div>
+              Sign and manage contracts
+            </li>
+            <li>
+              <div class="icon icon-boxes"></div>
+              Create inventories
+            </li>
+            <li>
+              <div class="icon icon-keys"></div>
+              Organize move-ins and outs
+            </li>
+          </ul>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nemo enim ipsam voluptatem.</p>
+        </div>
+      </section>
+      <section id="professionals" class="professionals">
+        <div class="wrapper">
+          <h3>Are you a property professional?</h3>
+          <ul class="features">
+            <li>
+              <div class="icon icon-coin"></div>
+              Earn a residual income
+            </li>
+            <li>
+              <div class="icon icon-chair"></div>
+              Be your own boss
+            </li>
+            <li>
+              <div class="icon icon-compass"></div>
+              Have complete career freedom
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="professionals" class="professionals">
+        <div class="wrapper">
+          <h3>Meet the Team</h3>
+          <div class="team-list">
+            <figure class="team-member">
+              <img src="/img/team_imran.jpg" alt="Imran Ahmad">
+              <h4>Imran Khan</h4>
+              Co-founder
+            </figure>
+            <figure class="team-member">
+              <img src="/img/team_aneel.jpg" alt="Imran Ahmad">
+              <h4>Aneel Yasim</h4>
+              Co-founder
+            </figure>
+            <figure class="team-member">
+              <img src="/img/team_umar.jpg" alt="Imran Ahmad">
+              <h4>Umar Akram</h4>
+              CPO
+            </figure>
+            <figure class="team-member">
+              <img src="/img/team_khayam.jpg" alt="Imran Ahmad">
+              <h4>Khayam Khan</h4>
+              Creative
+            </figure>
+          </div>
         </div>
       </section>
       <section class="copyright">&copy; Smoor</section>
@@ -59,7 +153,12 @@
   ga('create', 'UA-XXXXXXXX-X', 'auto');
   ga('send', 'pageview');
 </script>
+    <div id="get-access" class="get-access">
+  <h3>Get Early Access</h3>
+  <p>Embed lead generation form here</p>
+  <a href="#" class="close-get-access">Close</a>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/main-543e7d45.js"></script>
+    <script type="text/javascript" src="/js/main-554a5bf7.js"></script>
   </body>
 </html>
