--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-82b914a2.css" />
+    <link rel="stylesheet" href="/css/main-b2435478.css" />
   </head>
   <body>
     <header class="hero-header">
@@ -21,7 +21,11 @@
       <section class="hero">
         <h1>Free lettings for everyone. Forever.</h1>
         <a href="#get-access" class="pill pill-large pill-red">Get Early Access</a>
-        <div class="smoor-iphone"></div>
+        <div class="smoor-iphone">
+          <div class="hero-people hero-people-tenant"></div>
+          <div class="hero-people hero-people-landlord"></div>
+          <div class="hero-people hero-people-professional"></div>
+        </div>
       </section>
       <section id="tenants" class="tenants">
         <header>
