--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-b2435478.css" />
+    <link rel="stylesheet" href="/css/main-fd002fe1.css" />
   </head>
   <body>
     <header class="hero-header">
@@ -22,6 +22,11 @@
         <h1>Free lettings for everyone. Forever.</h1>
         <a href="#get-access" class="pill pill-large pill-red">Get Early Access</a>
         <div class="smoor-iphone">
+          <div class="hero-screens">
+            <img src="/img/hero_screen1.png" alt="screenshot 1">
+            <img src="/img/hero_screen2.png" alt="screenshot 2">
+            <img src="/img/hero_screen3.png" alt="screenshot 3">
+          </div>
           <div class="hero-people hero-people-tenant"></div>
           <div class="hero-people hero-people-landlord"></div>
           <div class="hero-people hero-people-professional"></div>
@@ -163,6 +168,6 @@
   <a href="#" class="close-get-access">Close</a>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/main-c8a48932.js"></script>
+    <script type="text/javascript" src="/js/main-f46ac4a7.js"></script>
   </body>
 </html>
