Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-fd002fe1.css" />
+    <link rel="stylesheet" href="/css/main-3182ccf1.css" />
   </head>
   <body>
     <header class="hero-header">
@@ -26,6 +26,8 @@
             <img src="/img/hero_screen1.png" alt="screenshot 1">
             <img src="/img/hero_screen2.png" alt="screenshot 2">
             <img src="/img/hero_screen3.png" alt="screenshot 3">
+            <img src="/img/hero_screen4.png" alt="screenshot 4">
+            <img src="/img/hero_screen5.png" alt="screenshot 5">
           </div>
           <div class="hero-people hero-people-tenant"></div>
           <div class="hero-people hero-people-landlord"></div>
@@ -164,10 +166,39 @@
 </script>
     <div id="get-access" class="get-access">
   <h3>Get Early Access</h3>
-  <p>Embed lead generation form here</p>
+  <p>We’ll let you know when we launch.</p>
+  
+  <div id="mc_embed_signup">
+    <form action="//aentan.us7.list-manage.com/subscribe/post?u=f17564fb89b066d6eb2debfb6&amp;id=3908b5c716" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div class="mc-field-group">
+        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email address">
+      </div>
+      <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+      </div>    
+      <div style="position: absolute; left: -5000px;" aria-hidden="true">
+        <input type="text" name="b_f17564fb89b066d6eb2debfb6_3908b5c716" tabindex="-1" value="">
+      </div>
+      <div class="clear">
+        <input type="submit" value="Notify Me" name="subscribe" id="mc-embedded-subscribe" class="button pill pill-large pill-white">
+      </div>
+    </form>
+  </div>
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script type='text/javascript'>
+    (function($) {
+      window.fnames = new Array();
+      window.ftypes = new Array();
+      fnames[0]='EMAIL';
+      ftypes[0]='email';
+    }(jQuery));
+    var $mcj = jQuery.noConflict(true);
+  </script>
+  
   <a href="#" class="close-get-access">Close</a>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/main-f46ac4a7.js"></script>
+    <script type="text/javascript" src="/js/main-5e673e26.js"></script>
   </body>
 </html>
