Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-22263ef6.css" />
+    <link rel="stylesheet" href="/css/main-a2e5cb71.css" />
   </head>
   <body>
     <header class="hero-header">
@@ -26,13 +26,25 @@
         <div class="doodle doodle-picture"></div>
         <div class="doodle doodle-stool"></div>
         <div class="doodle doodle-shelf"></div>
-        
       </section>
       <section id="summary" class="summary">
-        <div class="wrapper">
-          <p class="lead">Lettings and renting property made easy, safe and free.</p>
-          <p>List, rent, make offers, sign the contract and move in.</p>
-          <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
+        <div class="wrapper wrapper-flex">
+          <div class="left">
+            <p class="lead">Lettings and renting property made easy, safe and free.</p>
+            <p>List, rent, make offers, sign the contract and move in.</p>
+            <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
+          </div>
+          <div class="right">
+            <div class="smoor-iphone">
+            <div class="hero-screens">
+              <img src="/img/hero_screen1.png" alt="screenshot 1">
+              <img src="/img/hero_screen2.png" alt="screenshot 2">
+              <img src="/img/hero_screen3.png" alt="screenshot 3">
+              <img src="/img/hero_screen4.png" alt="screenshot 4">
+              <img src="/img/hero_screen5.png" alt="screenshot 5">
+            </div>
+          </div>
+          </div>
         </div>
       </section>
       </section>
