Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-a2e5cb71.css" />
+    <link rel="stylesheet" href="/css/main-d9a30d5a.css" />
   </head>
   <body>
     <header class="hero-header">
   <a href="/">
-    <svg width="60" height="36" viewBox="0 0 60 36" xmlns="http://www.w3.org/2000/svg"><title>Group 2</title><g transform="translate(2 2)" stroke-width="4" stroke="#F64662" fill="none" fill-rule="evenodd"><rect width="56" height="32" rx="16"/><path d="M40 14c-2.394 4.186-6.869 7-12 7s-9.606-2.814-12-7" stroke-linecap="round"/></g></svg> Smoor
+    <svg width="60" height="36" viewBox="0 0 60 36" xmlns="http://www.w3.org/2000/svg"><title>Group 2</title><g transform="translate(2 2)" stroke-width="4" stroke="#F64662" fill="none" fill-rule="evenodd"><rect width="56" height="32" rx="16"/><path d="M40 14c-2.394 4.186-6.869 7-12 7s-9.606-2.814-12-7" stroke-linecap="round"/></g></svg> 
   </a>
   <a href="#get-access" class="pill pill-red">Get Early Access</a>
 </header>
@@ -30,8 +30,8 @@
       <section id="summary" class="summary">
         <div class="wrapper wrapper-flex">
           <div class="left">
-            <p class="lead">Lettings and renting property made easy, safe and free.</p>
-            <p>List, rent, make offers, sign the contract and move in.</p>
+            <h2>Lettings and renting property made easy, safe and free.</h2>
+            <p class="lead">List, rent, make offers, sign the contract and move in.</p>
             <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
           </div>
           <div class="right">
@@ -55,7 +55,7 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p class="lead">Landlords, everything you need in one place.</p>
+          <h2>Landlords, everything you need in one place.</h2>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -86,7 +86,6 @@
               Organize move-ins and outs
             </li>
           </ul>
-          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nemo enim ipsam voluptatem.</p>
         </div>
       </section>
       <section id="tenants" class="tenants">
@@ -96,7 +95,7 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p class="lead">Tenants, find the perfect place to live without the headahes and fees.</p>
+          <h2>Tenants, find the perfect place to live without the headahes and fees.</h2>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -119,7 +118,6 @@
               Move in
             </li>
           </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
       </section>
       <section id="professionals" class="professionals">
@@ -143,27 +141,31 @@
       </section>
       <section id="professionals" class="professionals">
         <div class="wrapper">
-          <h3>Meet the Team</h3>
+          <h3>The Team</h3>
           <div class="team-list">
             <figure class="team-member">
               <img src="/img/team_imran.jpg" alt="Imran Ahmad">
               <h4>Imran Khan</h4>
-              Co-founder
+              Co-founder<br>
+              <span class="text-gray">Brand & Marketing</span>
             </figure>
             <figure class="team-member">
               <img src="/img/team_aneel.jpg" alt="Imran Ahmad">
               <h4>Aneel Yasim</h4>
-              Co-founder
+              Co-founder<br>
+              <span class="text-gray">Management & Support</span>
             </figure>
             <figure class="team-member">
               <img src="/img/team_umar.jpg" alt="Imran Ahmad">
               <h4>Umar Akram</h4>
-              CPO
+              Co-founder<br>
+              <span class="text-gray">Product & Growth</span>
             </figure>
             <figure class="team-member">
               <img src="/img/team_khayam.jpg" alt="Imran Ahmad">
               <h4>Khayam Khan</h4>
-              Creative
+              Co-founder<br>
+              <span class="text-gray">UX & UI</span>
             </figure>
           </div>
         </div>
