Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smoor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
-    <link rel="stylesheet" href="/css/main-469a50ce.css" />
+    <link rel="stylesheet" href="/css/main-6ed611d9.css" />
   </head>
   <body>
     <header class="hero-header">
@@ -83,7 +83,7 @@
         
         </header>
         <div class="wrapper">
-          <h2>Tenants, find the perfect place to live without the headahes and fees.</h2>
+          <h2>Tenants, find the perfect place to live without the headaches and fees.</h2>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -95,7 +95,7 @@
             </li>
             <li>
               <div class="icon icon-document"></div>
-              Neogtiate offers
+              Negotiate offers
             </li>
             <li>
               <div class="icon icon-sign"></div>
